--- a/conf.sample
+++ b/conf.sample
@@ -10,6 +10,9 @@ savedir=/var/www/oyster/
 # it will search your files under this directory and build a 
 # default playlist from these.
 mediadir=/Multimedia/Audio/
-# maxlastvotes sets the maximum number of saved votes,
-# from which oyster chooses songs at random
+# maxlastvotes sets the maximum number of saved votes
+# (oyster chooses songs at random from this list)
 maxlastvotes=30
+# voteplay sets the probability that one of the files from 
+# lastvotes is played.
+voteplay=10
