--- a/conf.sample
+++ b/conf.sample
@@ -10,6 +10,8 @@ savedir=/var/www/oyster/
 # it will search your files under this directory and build a 
 # default playlist from these.
 mediadir=/Multimedia/Audio/
+# theme specifies the chosen theme
+theme=default
 # maxlastvotes sets the maximum number of saved votes
 # (oyster chooses songs at random from this list)
 maxlastvotes=30
