--- a/conf.sample
+++ b/conf.sample
@@ -15,6 +15,6 @@ theme=default
 # maxlastvotes sets the maximum number of saved votes
 # (oyster chooses songs at random from this list)
 maxscored=30
-# voteplay sets the probability that one of the files from 
-# lastvotes is played.
+# voteplay sets the probability in percent that one of the
+# files from lastvotes is played.
 voteplay=10
