--- a/conf.sample
+++ b/conf.sample
@@ -18,3 +18,6 @@ maxscored=30
 # voteplay sets the probability in percent that one of the
 # files from lastvotes is played.
 voteplay=10
+# coverfilenames is a comma-seperated list, which lists
+# all possible names for album-covers
+coverfilenames=cover.png,cover.jpg
