Rechte des control-files kÃ¶nnen angepasst werden

--- a/conf.sample
+++ b/conf.sample
@@ -34,3 +34,6 @@ filetypes=ogg,mp3
 # player for filetypes
 ogg=/usr/bin/ogg123
 mp3=/usr/bin/mpg321
+
+# mode of the $basedir/control file (4 digits!)
+control_mode=0600
