--- a/oysterlog.conf
+++ b/oysterlog.conf
@@ -29,7 +29,7 @@ mode=a
 
 [handler_logfile]
 class=FileHandler
-level=INFO
+level=DEBUG
 formatter=date
 args=('oyster.log', 'a')
 filename=oyster.log
