lastfm scrobbling... nicht schoen aber wirksam.

--- a/oysterlog.conf
+++ b/oysterlog.conf
@@ -1,5 +1,5 @@
 [loggers]
-keys=root,oyster
+keys=root,oyster,scrobbler
 
 [handlers]
 keys=generalfile,logfile
@@ -18,6 +18,14 @@ qualname=oyster
 handlers=logfile
 channel=oyster
 parent=(root)
+
+[logger_scrobbler]
+level=DEBUG
+propagate=1
+qualname=scrobbler
+handlers=logfile
+channel=scrobbler
+parent=(oyster)
 
 [handler_generalfile]
 class=FileHandler
