--- a/conf.sample
+++ b/conf.sample
@@ -75,3 +75,9 @@ vol_filter_regexp=pcm ([0-9]{1,3}),
 #vol_down_cmd="/usr/bin/setmixer vol -5"
 #vol_up_cmd="/usr/bin/setmixer vol +5"
 #vol_set_cmd="/usr/bin/setmixer vol "
+ 
+## last.fm settings
+# Turn scrobbling on or off
+lfm_scrobble=0
+lfm_user=user
+lfm_password=password
