--- a/conf.sample
+++ b/conf.sample
@@ -66,17 +66,12 @@ midvolume=50
 # Volume setting. Up and down commands are called as they are,
 # the set command is given an additional parameter. (volume percentage, range:
 # 1 to 100)
-vol_down_cmd=/usr/bin/aumix -w -5
-vol_up_cmd=/usr/bin/aumix -w +5
-vol_set_cmd=/usr/bin/aumix -w 
-vol_get_cmd=/usr/bin/aumix -w q
-vol_filter_regexp=pcm ([0-9]{1,3}),
-#vol_get_cmd=/usr/bin/setmixer -V 
-#vol_filter_regexp=vol - ([0-9]{1,3}),
-#vol_down_cmd="/usr/bin/setmixer vol -5"
-#vol_up_cmd="/usr/bin/setmixer vol +5"
-#vol_set_cmd="/usr/bin/setmixer vol "
- 
+vol_down_cmd=/usr/bin/amixer set PCM 5%-
+vol_up_cmd=/usr/bin/amixer set PCM 5%+
+vol_set_cmd=/usr/bin/amixer set PCM
+vol_get_cmd=/usr/bin/amixer get PCM
+vol_filter_regexp=Front Left: Playback [0-9]+ \[([0-9]{1,3})%\]
+
 ## last.fm settings
 # Turn scrobbling on or off
 lfm_scrobble=0
